--- a/source/_posts/工作伊始.md
+++ b/source/_posts/工作伊始.md
@@ -5,4 +5,4 @@ tags:
 	- 工作
 	- 总结
 ---
-外来准备一个工作专门的blog，但是两个blog很难管理，而且内容也都不充实，所以现在也在这个blog中更新自己工作的内容，希望能和blog一起成长。
+本来准备一个工作专门的blog，但是两个blog很难管理，而且内容也都不充实，所以现在也在这个blog中更新自己工作的内容，希望能和blog一起成长。
