--- a/source/_posts/【电影】【国漫】哪吒之魔童降世.md
+++ b/source/_posts/【电影】【国漫】哪吒之魔童降世.md
@@ -5,7 +5,7 @@ tags:
     - 电影
     - 国漫
 abstract: 国漫的良心推荐，付播放地址及直链下载地址
-header_image: "http://royolaindex.wonzan.com/?/images/2019/10/20/OEGzF3oBAg/d2d37dae734f196315ef3b58c28f2784.jpg"
+header_image: "https://upload.cc/i1/2019/10/20/7KPmXZ.jpg"
 ---
 # 感慨
 &ensp;&ensp;&ensp;&ensp;&ensp;国漫自2015年的《大圣归来》之后，确实渐渐有了崛起之势，也不枉费国家每年这么多补贴进去。不过，这是一个大蛋糕，成年人的动漫市场，长期被欧美、日本等较为成熟的生产地霸占，确实对这一代人的软文化有很大的影响。在此，也希望国家的动漫产业能越来越成熟，越来越蓬勃。（虽然，给盗版地址，似乎不是非常政治正确，手动狗头！）顺便也期待年初一的新剧--姜子牙传奇！
@@ -98,6 +98,6 @@ Stream size                    : 149 MiB (5%)
 Default                        : Yes
 Alternate group                : 1
 
-![](http://royolaindex.wonzan.com/?/images/2019/10/20/MUmNpEUpHN/uLdKWd.jpg)
+![](uLdKWd.jpg)
 
 ## 下载
