--- a/source/_posts/【电影】【国漫】哪吒之魔童降世.md
+++ b/source/_posts/【电影】【国漫】哪吒之魔童降世.md
@@ -102,4 +102,7 @@ Alternate group                : 1
 
 ## 下载
 
+{% dplayer "url=https://www.royonedrive.tk/down/%E5%9B%BD%E8%AF%AD%E5%AD%A6/%E7%94%B5%E5%BD%B1/%E5%93%AA%E5%90%92%E4%B9%8B%E9%AD%94%E7%AB%A5%E9%99%8D%E4%B8%96%5BGB%5D%5B1080P%5D.mp4" "pic=https://upload.cc/i1/2019/10/20/7KPmXZ.jpg" "loop=yes" "theme=#FADFA3" "autoplay=false" "token=tokendemo" %}
+
+
 **[下载地址](http://royolaindex.wonzan.com/?/%E5%9B%BD%E8%AF%AD%E5%AD%A6/%E7%94%B5%E5%BD%B1/%E5%93%AA%E5%90%92%E4%B9%8B%E9%AD%94%E7%AB%A5%E9%99%8D%E4%B8%96%5BGB%5D%5B1080P%5D.mp4)**
