--- a/source/_posts/雷霆沙赞2019.md
+++ b/source/_posts/雷霆沙赞2019.md
@@ -41,9 +41,9 @@ We all have a superhero inside us, it just takes a bit of magic to bring it out.
 
 # 在线观看/资源下载
 ------------------------------------
-**[在线观看](http://192.210.152.123:34567/A:/外语学/美帝/电影/DC/雷霆沙赞.Shazam.2019.HD1080P.x265.HEVC.英语中文字幕.Eng.CHS.Korean.aac.btzimu/雷霆沙赞.Shazam.2019.HD1080P.x265.HEVC.英语中文字幕.Eng.CHS.Korean.aac.btzimu.mp4?action=share)**
+**[直连下载](http://royolaindex.wonzan.com/?/%E5%A4%96%E8%AF%AD%E5%AD%A6/%E7%BE%8E%E5%B8%9D/%E7%94%B5%E5%BD%B1/DC/%E9%9B%B7%E9%9C%86%E6%B2%99%E8%B5%9E.Shazam.2019.HD1080P.x265.HEVC.%E8%8B%B1%E8%AF%AD%E4%B8%AD%E6%96%87%E5%AD%97%E5%B9%95.Eng.CHS.Korean.aac.btzimu/%E9%9B%B7%E9%9C%86%E6%B2%99%E8%B5%9E.Shazam.2019.HD1080P.x265.HEVC.%E8%8B%B1%E8%AF%AD%E4%B8%AD%E6%96%87%E5%AD%97%E5%B9%95.Eng.CHS.Korean.aac.btzimu.mp4)**
 
-<!-- **[在线观看](http://roypk-olaindex.herokuapp.com/down/%E5%A4%96%E8%AF%AD%E5%AD%A6/%E7%BE%8E%E5%B8%9D/%E7%94%B5%E5%BD%B1/DC/%E9%9B%B7%E9%9C%86%E6%B2%99%E8%B5%9E.Shazam.2019.HD1080P.x265.HEVC.%E8%8B%B1%E8%AF%AD%E4%B8%AD%E6%96%87%E5%AD%97%E5%B9%95.Eng.CHS.Korean.aac.btzimu/%E9%9B%B7%E9%9C%86%E6%B2%99%E8%B5%9E.Shazam.2019.HD1080P.x265.HEVC.%E8%8B%B1%E8%AF%AD%E4%B8%AD%E6%96%87%E5%AD%97%E5%B9%95.Eng.CHS.Korean.aac.btzimu.mp4)** -->
+
 
 **[种子文件](magnet:?xt=urn:btih:1A48787A9B39CA3DBBD86B125311C7262769E75A)** 
 
