--- a/source/_posts/大悬臂盖梁施工工艺调研.md
+++ b/source/_posts/大悬臂盖梁施工工艺调研.md
@@ -47,12 +47,13 @@ abstract: 各成功案例的施工成果论文的小结
 ## 盖梁现场拼装
 ![](Snipaste_2020-03-17_10-28-47.png)
 
-1. 盖梁姿态测量与调节
-  + 预制构件的测量就位是预制拼装施工控制的重点把控内容，预制盖梁的精准就位是保证设计道路线形的前提。
+### 盖梁姿态测量与调节
+  - 预制构件的测量就位是预制拼装施工控制的重点把控内容，预制盖梁的精准就位是保证设计道路线形的前提。
   + 对于标准预制盖梁，沿道路前进方向和垂直道路前进方向的轴向测量是核心控制指标。
   + 盖梁姿态就位时，放置在盖梁横向中线和端部中轴线的荧光标志位置应符合设计参数，盖梁顶部标高河横向坡度作为辅助测量指标。
     + 盖梁端部中轴线直接影响上部小箱梁的制作梁长，是最为关键的测量值。
-1. 垫层坐浆
+    
+### 垫层坐浆
   + 立柱与盖梁之间坐浆之前：
     + 安放调节垫块（200mm $\times$ 200mm $\times$ 21mm橡胶制作，地下可设置薄钢板）保证垫层厚度
     + 调整盖梁安装标高
@@ -61,7 +62,8 @@ abstract: 各成功案例的施工成果论文的小结
     + 采用高压气管将多余水清除，确保立柱顶面不留水迹
     + 在立柱顶安装挡浆模块
     + 浇筑垫层砂浆：强度应大于盖梁混凝土标号一个等级以上过。
-2. 新型波纹管灌浆
+    
+### 新型波纹管灌浆
   + 波纹管灌浆砂浆的性能和灌浆密实度是预制拼装结构的根本保障，灌浆工艺控制也是整个预制拼装施工工艺质量控制的重中之重。
   + 项目部根据预制拼装的工艺特点，配备了专业化的施工设备，并将整合成一体化作业平台。
   + 灌浆波纹管内砂浆采用C100高强无收缩水泥灌浆料。
