--- a/source/_posts/【电影】【国漫】哪吒之魔童降世.md
+++ b/source/_posts/【电影】【国漫】哪吒之魔童降世.md
@@ -10,12 +10,14 @@ header_image: "https://upload.cc/i1/2019/10/20/7KPmXZ.jpg"
 # 感慨
 &ensp;&ensp;&ensp;&ensp;&ensp;国漫自2015年的《大圣归来》之后，确实渐渐有了崛起之势，也不枉费国家每年这么多补贴进去。不过，这是一个大蛋糕，成年人的动漫市场，长期被欧美、日本等较为成熟的生产地霸占，确实对这一代人的软文化有很大的影响。在此，也希望国家的动漫产业能越来越成熟，越来越蓬勃。（虽然，给盗版地址，似乎不是非常政治正确，手动狗头！）顺便也期待年初一的新剧--姜子牙传奇！
 
+<!-- more -->
 # 剧照
 &ensp;&ensp;&ensp;&ensp;&ensp;这里也附上几张觉得不错的剧照。
 <!-- ![](https://img1.doubanio.com/view/photo/l/public/p2563780504.jpg) -->
 ![](https://pic2.zhimg.com/80/v2-9ba9996ea8ab1ec38009c086a42a50dd_hd.jpg)
 ![](https://pic1.zhimg.com/80/v2-e44c3bea4ea1a4a3fd7edb8cbaf781d0_hd.jpg)
 ![](https://pic2.zhimg.com/80/v2-f7f5edc6bb014c1339cc00d9ef250009_hd.jpg)
+
 
 
 # 剧信息
