--- a/source/_posts/大悬臂盖梁施工工艺调研.md
+++ b/source/_posts/大悬臂盖梁施工工艺调研.md
@@ -11,7 +11,7 @@ abstract: 各成功案例的施工成果论文的小结
 # 《上海S7公路盖梁预制拼装施工工艺》 --查义强
    + 上部结构高架桥标准段及匝道桥的上部结构，主要采用简支小箱梁结构，标准跨径在30~35m；
    + 下部结构采用预应力混凝土倒T盖梁+独柱墩的形式
-
+<!-- more -->
 ## 标准盖梁预制
    + 采用了**高挡块**和**深埋锚**构造；
    + 盖梁端部挡块高<font color = red>1.3m</font>：遮挡小箱梁和脊骨梁之间的缝隙；防止带防撞墙预制的边梁倾覆。
