--- a/source/_posts/桥墩盖梁计算(一).md
+++ b/source/_posts/桥墩盖梁计算(一).md
@@ -9,6 +9,7 @@ abstract: 本blog开始更新桥梁设计的内容，先从下部结构中墩台
 ---
 按规范JTJ023--85第3.4.2条，对于双柱式墩台，当盖梁的刚度与柱的刚度比大于5时，盖梁可按简支梁计算。盖梁按简支梁计算，较易进行，本篇中不做示例。
 桥台盖梁如    按钢构计算，由于桥台肋身系与基础固结，可以直接采用桥梁结构综合程序计算。桥墩刚构由于基础是桩基，现采用集成刚度法计算示例。
+<!-- more -->
 # 桥墩盖梁的荷载
 ## 1.恒载
 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;设定主梁及上部的恒载为1010.616kN，盖梁的自重为72.208kN/m。
