--- a/source/_posts/雷霆沙赞2019.md
+++ b/source/_posts/雷霆沙赞2019.md
@@ -25,6 +25,7 @@ header_image: https://img3.doubanio.com/view/photo/l/public/p2546020486.webp
 【IMDb链接】: [tt0448115](http://www.imdb.com/title/tt0448115)
 【编辑整理】: [[下片片网\]www.xiepp.com](http://www.xiepp.com/) 
 
+<!-- more -->
 # 剧情介绍/剧照
 -------------------------------------
 
