--- a/source/_posts/国内外各种建站免费面板和一键包汇总.md
+++ b/source/_posts/国内外各种建站免费面板和一键包汇总.md
@@ -12,7 +12,7 @@ VestaCP：http://vestacp.com/ （比较推荐的面板，自带中文）
 Kloxo-MR：https://github.com/mustafaramadhan/kloxo/ （7.0真的很强大，很好看，很实用，有中文包）
 Webmin/Virtualmin：http://www.webmin.com/virtualmin.html （很稳定，很安全，自带中文）
 Ispconfig：https://github.com/dclardy64/ISPConfig-3-Debian-Installer （官网没看懂这是一键包，有中文包）
-
+<!-- more -->
 i-MSCP：http://i-mscp.net/  （简单易用，自带中文）
 
 EasySCP：http://www.easyscp.net/  （和i-MSCP一样来自Ispconfig，自带中文）
