--- a/source/_posts/大悬臂盖梁施工工艺调研.md
+++ b/source/_posts/大悬臂盖梁施工工艺调研.md
@@ -7,6 +7,7 @@ tags:
 	 - 盖梁
 	 - 拼装施工
 abstract: 各成功案例的施工成果论文的小结
+mathjax: true
 ---
 # 《上海S7公路盖梁预制拼装施工工艺》 --查义强
    + 上部结构高架桥标准段及匝道桥的上部结构，主要采用简支小箱梁结构，标准跨径在30~35m；
