--- a/source/_posts/陈一发-谢谢你的爱.md
+++ b/source/_posts/陈一发-谢谢你的爱.md
@@ -8,7 +8,11 @@ abstract: 永远的67373
 **永远的67373**
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/iF5IKRUj-2E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
+<!-- {% dplayer "url=http://www.royonedrive.tk/SJHL/%E5%9B%BE%E5%BA%8A/021309b9283fc1e86169a35fd51486f2.mp4" "pic=15270359193790494.jpg" "loop=yes" "theme=#FADFA3" "autoplay=false" "token=tokendemo" %} -->
+
 {% dplayer "url=谢谢你的爱_陈一发.mp4" "pic=15270359193790494.jpg" "loop=yes" "theme=#FADFA3" "autoplay=false" "token=tokendemo" %}
+
+<!-- {% dplayer "url=https://dl.sm9.top/Video/2018/KeyCastOW.mp4" %}  -->
 
 <!-- {% dplayer "url=https://image.suxingboke.com/down/480P/%E5%B0%84%E9%9B%95%E8%8B%B1%E9%9B%84%E4%BC%A0/01.mp4" "pic=15270359193790494.jpg" "loop=yes" "theme=#FADFA3" "autoplay=false" "token=tokendemo" %} -->
 
