update: update the content

--- a/source/_posts/无用的迷茫，认清自己.md
+++ b/source/_posts/无用的迷茫，认清自己.md
@@ -5,11 +5,17 @@ tags:
     - 生活 
 ---
 
-“It is not our abilities that show what we truly are. It is our choices.”
+<blockquote class="blockquote-center">
+It is not our abilities that show what we truly are. It is our choices.
 
+</blockquote>
 <!-- more -->
 
-“Yesterday is history, tomorrow is a mystery, today is God's gift, that's why we call it the present.” 
+
+<blockquote class="blockquote-center">
+Yesterday is history, tomorrow is a mystery, today is God's gift, that's why we call it the present.
+</blockquote>
+
 
 迷茫是人生的伴侣，逃避是直觉的选择。但人生是一场注定了目的地的旅程，如果一直萎缩着不敢遥望窗外，那留下的就只有谢幕仪式。
 
